# savit

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yml
savit/: __main__.py  main.py
savit/config/: __init__.py
tests/: test_main.py
