[tool.poetry]
name = "savit"
version = "0.1.2"
description = "Saves your commands as you use them"
authors = ["ivansantiagojr <ivansantiago.junior@gmail.com>"]
readme = "README.md"


[tool.poetry.scripts]
savit = "savit.main:app"


[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.7.0"}


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^1.0.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
taskipy = "^1.10.4"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.4"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"
